WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145130
Fix mismatched-tags warnings related to CoordinatedGraphics
https://bugs.webkit.org/show_bug.cgi?id=145130
Summary
Fix mismatched-tags warnings related to CoordinatedGraphics
Csaba Osztrogonác
Reported
2015-05-18 09:10:37 PDT
SSIA
Attachments
Patch
(2.86 KB, patch)
2015-05-18 09:11 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-05-18 09:11:48 PDT
Created
attachment 253327
[details]
Patch
WebKit Commit Bot
Comment 2
2015-05-21 00:27:00 PDT
Comment on
attachment 253327
[details]
Patch Clearing flags on attachment: 253327 Committed
r184708
: <
http://trac.webkit.org/changeset/184708
>
WebKit Commit Bot
Comment 3
2015-05-21 00:27:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug