Fix mismatched-tags warnings related to CoordinatedGraphics https://bugs.webkit.org/show_bug.cgi?id=145130

Reviewed by Darin Adler.

* Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.h:
* UIProcess/CoordinatedGraphics/CoordinatedLayerTreeHostProxy.messages.in:
* WebProcess/WebPage/CoordinatedGraphics/ThreadedCoordinatedLayerTreeHost.h:


Canonical link: https://commits.webkit.org/163271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184708 268f45cc-cd09-0410-ab3c-d52691b4dbfc